[gd_scene load_steps=2 format=3 uid="uid://cpdo7bx7xqye8"]

[ext_resource type="Script" uid="uid://dbgvllcy3psno" path="res://scenes/Data/question.gd" id="1_nnuj0"]

[node name="Question" type="VBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_nnuj0")

[node name="MainText" type="Label" parent="."]
layout_mode = 2
text = "gggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggggg"
clip_text = true
text_overrun_behavior = 5

[node name="Buttons" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="ID" type="Button" parent="Buttons"]
layout_mode = 2
text = "ID: "

[node name="Parent" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_horizontal = 3
text = "Parent"

[node name="Delete" type="Button" parent="Buttons"]
layout_mode = 2
text = "-"

[connection signal="pressed" from="Buttons/Parent" to="." method="_on_parent_pressed"]
[connection signal="pressed" from="Buttons/Delete" to="." method="_on_delete_pressed"]
